--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Outfit:wght@400;700&display=swap");
 
 body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   font-size: 15px;
   font-family: "Outfit", sans-serif;
   background-color: hsl(212, 45%, 89%);
@@ -16,9 +22,17 @@ body {
   color: hsl(228, 45%, 44%);
 }
 
+.solution {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
 .qr-code-card {
   width: 17rem;
-  margin: auto;
+  /* margin: auto; */
   border-radius: 1rem;
   padding: 1rem 1rem 2rem;
   background-color: hsl(0, 0%, 100%);
@@ -30,6 +44,7 @@ body {
 }
 
 .qr-title {
+  font-size: 1.5rem;
   font-weight: 700;
   text-align: center;
 }
@@ -50,6 +65,13 @@ body {
     border-radius: 0.7rem;
     padding: 0.7rem 0.7rem 1.5rem;
   }
+
+  
+.qr-title {
+  font-size: 1.2rem;
+  font-weight: 700;
+  text-align: center;
+}
 
   .qr-code img {
     border-radius: 0.7rem;
